Fixed nav z-index, edited scrollbar design

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,23 @@
 *{
   box-sizing: border-box;
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #fef6f8;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #831237;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #b61249;
+}
